--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "run:server": "node ./server/index.js",
+    "start": "node ./server/index.js",
     "debug:server": "node --inspect=0.0.0.0:9229 ./server/index.js",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
