--- a/aws/default.conf
+++ b/aws/default.conf
@@ -4,7 +4,7 @@ server {
     add_header Access-Control-Allow-Origin *;
 
     location / {
-        proxy_pass http://localhost:4000;
+        proxy_pass https://video-chat-webrtc-app.netlify.app:4000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Host $host;
